[gd_scene load_steps=27 format=2]

[ext_resource path="res://Character/CharacterStats.gd" type="Script" id=1]
[ext_resource path="res://Character/Character.gd" type="Script" id=2]
[ext_resource path="res://Character/CharacterTimers.gd" type="Script" id=3]
[ext_resource path="res://Character/assets/test_character.png" type="Texture" id=4]
[ext_resource path="res://PressStart2P.ttf" type="DynamicFontData" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 7.5

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3 ),
"transitions": PoolRealArray( 2, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "walk_down"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.03125 ), Vector2( 0, 8 ), Vector2( 0, 0.03125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.996094 ), Vector2( 1, 0.8 ), Vector2( 1, 0.996094 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ -15.0, -30.0, -15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 1 ), Vector2( 0.8, 1 ), Vector2( 0.9, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk_right"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 2 ),
"update": 0,
"values": [ 15.0, 30.0, 15.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.14, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 1 ), Vector2( 0.8, 1 ), Vector2( 0.9, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk_up"
length = 0.3
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0.03125 ), Vector2( 0, -8 ), Vector2( 0, 0.03125 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.996094 ), Vector2( 1, 1.2 ), Vector2( 1, 0.996094 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "walk_down"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "walk_up"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=12]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = Vector2( 0, 1.1 )
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = Vector2( 0, -1.1 )
blend_point_2/node = SubResource( 10 )
blend_point_2/pos = Vector2( -1, 0 )
blend_point_3/node = SubResource( 11 )
blend_point_3/pos = Vector2( 1, 0 )
min_space = Vector2( -1, -1.1 )
max_space = Vector2( 1, 1.1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
xfade_time = 0.13

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
xfade_time = 0.13

[sub_resource type="AnimationNodeStateMachine" id=15]
states/idle/node = SubResource( 7 )
states/idle/position = Vector2( 142, 82 )
states/walk/node = SubResource( 12 )
states/walk/position = Vector2( 318, 82 )
transitions = [ "idle", "walk", SubResource( 13 ), "walk", "idle", SubResource( 14 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[sub_resource type="CircleShape2D" id=17]
radius = 32.0

[sub_resource type="CircleShape2D" id=18]
radius = 128.25

[sub_resource type="StyleBoxFlat" id=19]
resource_local_to_scene = true
bg_color = Color( 0.054902, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=20]
resource_local_to_scene = true
bg_color = Color( 0, 0, 0, 0.239216 )

[sub_resource type="DynamicFont" id=21]
size = 8
font_data = ExtResource( 5 )

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 1, 1.00048 )
texture = ExtResource( 4 )

[node name="Animator" type="AnimationPlayer" parent="."]
anims/idle = SubResource( 2 )
anims/walk_down = SubResource( 3 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 5 )
anims/walk_up = SubResource( 6 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../Animator")
parameters/playback = SubResource( 16 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 1 )
max_health = 100.0

[node name="Timers" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DetectArea" type="Area2D" parent="."]
visible = false

[node name="DetectShape" type="CollisionShape2D" parent="DetectArea"]
shape = SubResource( 17 )

[node name="UndetectArea" type="Area2D" parent="."]
visible = false

[node name="UndetectShape" type="CollisionShape2D" parent="UndetectArea"]
shape = SubResource( 18 )

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -16.0
margin_right = 8.0
margin_bottom = -14.0
rect_pivot_offset = Vector2( 8, 0 )
custom_styles/fg = SubResource( 19 )
custom_styles/bg = SubResource( 20 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="HealthBar"]
position = Vector2( 8, 0 )
scale = Vector2( 0.4, 0.4 )

[node name="HealthNumber" type="Label" parent="HealthBar/Node2D"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -8.0
margin_right = 16.0
rect_pivot_offset = Vector2( 16, 8 )
custom_fonts/font = SubResource( 21 )
text = "9999"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
